OAuth added for google sign in

--- a/lifeStyleFront/index.html
+++ b/lifeStyleFront/index.html
@@ -8,7 +8,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <title>LifeStyle</title>
+    <title>FitFinTracker</title>
   </head>
   <body>
     <div id="root"></div>
